[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nodice-cli"
version = "0.1.0"
authors = [
    {name = "avnigo", email = "43263288+avnigo@users.noreply.github.com"},
]
description = "A simple diceware generator with no dependencies."
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
nodice = "nodice.__main__:main"
